# word-by-word-captions

./: README.md  dev-requirements.txt  pyproject.toml
owc/: __init__.py  __main__.py  owc.py
tests/: test_owc.py  test_wbw_captions.py
wbw_captions/: __init__.py  __main__.py  wbw_captions.py
